scaffolding with no linter errors

--- a/reference/tweezers_second_draft/preamble.tex
+++ b/reference/tweezers_second_draft/preamble.tex
@@ -70,7 +70,7 @@ linkcolor= blue,
 % \renewcommand{\vec}[1]{\bm{#1}}
 
 % Command to mark text in blue/red and define common units
-\newcommand{\blue}[1]{\textcolor{blue}{#1}}
+\newcommand{\blue}{\textcolor{blue}}
 \newcommand{\red}[1]{\textcolor{red}{#1}}
 \newcommand{\df}{\dfrac}
 \newcommand{\mic}{\mu\mathrm{m}}
