--- a/first_draft/main.tex
+++ b/first_draft/main.tex
@@ -26,18 +26,30 @@
 
 \begin{document}
 
+% \title{\mytitle}
+
+% % TODO: Add authors and affiliations based on reference_paper.md style
+% \author{Author 1 Name}
+% \email[]{author1@example.com}
+% \affiliation{Department of Physics, Harvard University, Cambridge, Massachusetts 02138, USA} % Define \hphys later if needed
+% \author{Author 2 Name}
+% \email[]{author2@example.com}
+% \affiliation{Department of Physics, Harvard University, Cambridge, Massachusetts 02138, USA} % Define \hphys later if needed
+% % Add more authors/affiliations as needed
+
+% \date{\today}
+
 \title{\mytitle}
 
-% TODO: Add authors and affiliations based on reference_paper.md style
-\author{Author 1 Name}
-\email[]{author1@example.com}
+\author{Adam Pearl}
+\email[]{apearl@college.harvard.edu}
 \affiliation{Department of Physics, Harvard University, Cambridge, Massachusetts 02138, USA} % Define \hphys later if needed
-\author{Author 2 Name}
-\email[]{author2@example.com}
+\author{Nicholas Lyu}
+\email[]{nicholaslyu@college.harvard.edu}
 \affiliation{Department of Physics, Harvard University, Cambridge, Massachusetts 02138, USA} % Define \hphys later if needed
-% Add more authors/affiliations as needed
 
 \date{\today}
+
 
 \begin{abstract}
 
