--- a/presentation/preamble.tex
+++ b/presentation/preamble.tex
@@ -7,6 +7,8 @@
 \usepackage{graphicx} % for figures
 \usepackage{comment} % allows block comments
 \usepackage[normalem]{ulem} % allows strikeout text, e.g. \sout{text}
+\usepackage{capt-of} % allows \captionof outside float environments
+
 
 % \usepackage{minted} % allows colored code
 % \usepackage{textcomp} % This package gives the text quote '
