--- a/live.main.tex
+++ b/live.main.tex
@@ -1,17 +1,4 @@
-\documentclass{beamer}
-
-\usepackage{graphicx} % Allows including images
-\usepackage{booktabs} % Allows the use of \toprule, \midrule and \bottomrule in tables
-
-% Use the preamble from the main paper if desired
-% \input{../first_draft/preamble.tex} 
-% \input{preamble.tex}
-
-\title[NV Center Presentation]{Optical Characterization and Coherent Control of Single NV Centers} % The short title appears at the bottom of every slide, the full title is only on the title page
-\author{Adam Pearl \and Nicholas Lyu}
-\institute[Harvard Physics]{Department of Physics \\ Harvard University}
-\date{\today} % Date, can be changed to a custom date
-\usepackage{siunitx}
+undefined
 \begin{document}
 
 \begin{frame}
@@ -146,7 +133,7 @@ GET PICTURE
 \begin{frame}{Splitting}
     \begin{minipage}{0.5\textwidth}
         \centering
-        \includegraphics[width=\linewidth]{presentation/figs/Nv_structure.jpg} \\
+        \includegraphics[width=\linewidth]{presentation/figs/Nv_structure.png} \\
         {\small }
     \end{minipage}
     \begin{minipage}{0.48\textwidth}
@@ -199,11 +186,10 @@ GET PICTURE
     \end{itemize}
     \item PL$(t) \propto \cos(\Omega_R t + \phi) \exp(-t/T_{Rabi})$. $\Omega_R$: Rabi frequency.
 \end{itemize}
-\vspace{1cm}
-\begin{minipage}{0.7\textwidth}
+\begin{minipage}{0.5\textwidth}
     \centering
-    \includegraphics[width=\linewidth]{presentation/figs/pulse.png} \\
-    {\small Pulse sequence}
+    \includegraphics[width=\linewidth]{presentation/figs/period_vs_power.png} \\
+    {\small (c) Third image (centered below)}
 \end{minipage}
 
 \end{frame}
@@ -213,13 +199,13 @@ GET PICTURE
     \begin{minipage}{0.4\textwidth}
         \centering
         \includegraphics[width=\linewidth]{presentation/figs/oscilations.png} \\
-        {\small Example oscillation}
+        {\small (a) First image}
     \end{minipage}
     \hfill
     \begin{minipage}{0.4\textwidth}
         \centering
         \includegraphics[width=\linewidth]{presentation/figs/attenuation_vs_power.png} \\
-        {\small Power calibration}
+        {\small (b) Second image}
     \end{minipage}
 
     \vspace{1em} % Vertical space between rows
@@ -228,7 +214,7 @@ GET PICTURE
     \begin{minipage}{0.5\textwidth}
         \centering
         \includegraphics[width=\linewidth]{presentation/figs/period_vs_power.png} \\
-        {\small $ \Omega_\text{R} \propto I_\text{mw}^2$}
+        {\small (c) Third image (centered below)}
     \end{minipage}
 \end{frame}
 \begin{frame}
@@ -275,3 +261,4 @@ GET PICTURE
 %------------------------------------------------
 
 \end{document} 
+undefined
