--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -67,6 +67,7 @@
         % \caption{Radiation sources and their effects on NV center states.}
         \label{tab:radiation_effects}
     \end{table}
+
 \end{frame}
 
 \begin{frame}
@@ -82,6 +83,11 @@
             \item Little fluorescence due to phonon emission (ISC). 
         \end{itemize}
     \end{itemize}
+    \begin{minipage}{0.5\textwidth}
+        \centering
+        \includegraphics[width=\linewidth]{presentation/figs/Nv_structure.jpg} \\
+        {\small }
+    \end{minipage}
     
 \end{frame}
 
@@ -112,7 +118,11 @@
 \end{frame}
 
 \begin{frame}{Labeled picture of workspace}
-    
+    \begin{minipage}{0.48\textwidth}
+        \centering
+        \includegraphics[width=\linewidth]{presentation/figs/galvo.png}
+        
+    \end{minipage}
 \end{frame}
 
 %------------------------------------------------
@@ -152,13 +162,13 @@ GET PICTURE
     \begin{minipage}{0.48\textwidth}
         \centering
         \includegraphics[width=\linewidth]{presentation/figs/dips.png}
-        {\small(a) First image caption}
+        {\small Splitting for B = $1.3$mT}
     \end{minipage}
     \hfill
     \begin{minipage}{0.48\textwidth}
         \centering
         \includegraphics[width=\linewidth]{presentation/figs/split_vs_field.png}
-        {\small(b) Second image caption}
+        {\small $\gamma_e \propto ???$}
     \end{minipage}
 \end{frame}
 % \section{Coherent Control}
@@ -241,7 +251,8 @@ GET PICTURE
     \end{itemize}
     \item Fit: Envelope$(2\tau) \propto \exp(-(2\tau/T_2)^p)$. $T_2$: coherence time. 
 \end{itemize}
-
+    \centering
+    \includegraphics[width=\linewidth]{presentation/figs/hahn_wiki.jpg}\
 \end{frame}
 
 \begin{frame}{Results}
