--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -118,11 +118,19 @@
 \end{frame}
 
 \begin{frame}{Labeled picture of workspace}
+
     \begin{minipage}{0.48\textwidth}
         \centering
         \includegraphics[width=\linewidth]{presentation/figs/galvo.png}
-        
+   
     \end{minipage}
+    \hfill
+    \begin{minipage}{0.48\textwidth}
+        \centering
+        \includegraphics[width=\linewidth]{presentation/figs/picture.jpg}
+       
+    \end{minipage}
+
 \end{frame}
 
 %------------------------------------------------
