--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -117,7 +117,7 @@
 
 \end{frame}
 
-\begin{frame}{Labeled picture of workspace}
+\begin{frame}{Workspace and Galvo scan}
 
     \begin{minipage}{0.48\textwidth}
         \centering
@@ -176,7 +176,7 @@ GET PICTURE
     \begin{minipage}{0.48\textwidth}
         \centering
         \includegraphics[width=\linewidth]{presentation/figs/split_vs_field.png}
-        {\small $\gamma_e \propto ???$}
+        {\small $\gamma_e \propto mT^{-1}$}
     \end{minipage}
 \end{frame}
 % \section{Coherent Control}
@@ -267,7 +267,7 @@ GET PICTURE
     \centering
     \includegraphics[width=\linewidth]{presentation/figs/hahn.png}\
 
-    Discussion:
+
 \end{frame}
 %------------------------------------------------
 
